--- a/estilos.css
+++ b/estilos.css
@@ -29,7 +29,7 @@
 }
 #p-inicio{
     display: block;
-    min-width: 100vh;
+    /**min-width: 100vh;**/
     min-height: 100vh;
     margin: 0;
     padding: 0;
