--- a/estilos.css
+++ b/estilos.css
@@ -10,7 +10,6 @@
     font-family: 'Comfortaa', cursive, 'Josefin Sans', sans-serif;  
     align-items: center;
     justify-content: center;
-    background-image: url("logomyo.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size:cover; 
@@ -50,6 +49,16 @@ h1{
     background-position: center;
     text-align: center; 
 }
+.contimagenbio{
+    text-align: center;
+    display:block;
+    min-width: 100vh;
+}
+
+#logo{
+    width: 80%;
+    vertical-align: middle;
+}
 #menú{
     width: 100%;
     height: 20%;
@@ -64,7 +73,7 @@ h1{
 }
 
 #imagen{
-    max-width: 60%;
+    width: 40%;
     vertical-align: middle;
 }
 
@@ -132,7 +141,7 @@ nav > *:nth-child(1):hover span:nth-child(3)::before{
     font-family: 'Comfortaa', cursive, 'Josefin Sans', sans-serif;
     background-position: center;
     text-align: justify;
-    opacity: 0.90;
+    opacity: 0.7;
     width: 65%;
     height: fit-content; 
     margin-top: auto;
@@ -217,9 +226,9 @@ input[type=text], input[type=email],textarea{
     .formulario{width:90%}
     nav {flex-direction: column}
     nav a {width: 100%; height:100%}
-    .p-bio{width: 90%;}
-    #p-bio{background-image: none; background-color: black}
-    #p-contacto{background-color: black;}
+    .p-bio{width: 90%; font-size: 0.5em;}
+    #imagen{width: 70%;}
+    footer{font-size: 15px;} 
 }
 @media only screen and (max-width:576px){
     .contenedorv{width:100%}
@@ -227,9 +236,9 @@ input[type=text], input[type=email],textarea{
     .formulario{width:90%}
     nav {flex-direction: column}
     nav a {width: 100%; height:100%}
-    .p-bio{width: 95%;}
-    #p-bio{background-image: none; background-color: black}
-    #p-contacto{background-color: black;}
+    .p-bio{width: 95%; font-size:0.8em}
+    #imagen{width: 80%}
+    footer{font-size: 10px;}
 }
 
 footer{
