--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,6 @@
 * {
     box-sizing: border-box;
 }
-
 #p-videos, #p-bio, #p-contacto{
     display: block;
     min-height: 100vh;
@@ -16,7 +15,6 @@
     background: linear-gradient(to bottom, rgb(0, 0, 0), rgb(253, 84, 5));
     
 }
-
 #p-fotos{
     display: block;
     width: 100%;
@@ -65,13 +63,13 @@ h1{
     justify-content: left;
 }
 .contimagen{
+    margin: auto;
     text-align: center;
     display:block;
-    max-height: 100vh;
+    min-height: 60vh;
 }
 #imagen{
     width: 30%;
-    vertical-align: middle;
 }
 nav {
     display: flex;
@@ -186,13 +184,26 @@ p{
     display: flex;
     padding:5px;
     flex-wrap: wrap;
-
 }
 .fotcolumna{
     flex: 33.33%;
     padding: 5px;
 }
-.formulario{
+.dato{
+    display: block;
+    width: 60%;
+    height: 100%;
+    margin:auto;
+    padding: 2%;
+    background-color: rgb(168, 218, 252);
+    opacity: 0.8;
+    align-items: center;
+    justify-content: center;
+    font-family:  'Comfortaa', cursive, 'Josefin Sans', sans-serif;
+    font-size: 1em;
+}
+
+.formulario, .dato{
     display: flex;
     width: 60%;
     height: 100%;
@@ -228,20 +239,22 @@ input[type=text], input[type=email],textarea{
     border:2px solid;
     border-radius: 2px; 
 }
-@media only screen and (max-width:768px){
+@media only screen and (max-width:1030px) and (max-height:800){
     .contenedorv{width:50%}
     .fotcolumna{flex:50%}
     .formulario{width:90%}
+    .dato{width:90%; font-size: 0.5em;}
     nav {flex-direction: column}
     nav a {width: 100%; height:100%}
     .p-bio{width: 90%; font-size: 0.5em;}
-    #imagen{width: 80%;}
+    #imagen{width: 50%}
     footer{font-size: 15px;} 
 }
-@media only screen and (max-width:576px){
+@media only screen and (max-height:1400px) and (max-width:920px){
     .contenedorv{width:100%}
     .fotcolumna{flex:100%}
-    .formulario{width:90%}
+    .formulario{width:90%} 
+    .dato{width:90%; font-size: 0.8em;}
     nav {flex-direction: column}
     nav a {width: 100%; height:100%}
     .p-bio{width: 95%; font-size:0.8em}
